--- a/assets/fonts/custom-fonts.css
+++ b/assets/fonts/custom-fonts.css
@@ -1,13 +1,3 @@
-
-@font-face {
-  font-family: 'OpenSansLight';
-  src: url('assets/fonts/OpenSansLight/OpenSansLight.woff2') format('woff2'),
-    url('assets/fonts/OpenSansLight/OpenSansLight.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
 @font-face {
   font-family: 'LatoRegular';
   src: url('assets/fonts/LatoRegular/LatoRegular.woff2') format('woff2'),
@@ -17,23 +7,7 @@
   font-display: swap;
 }
 
-@font-face {
-  font-family: 'LatoLightItalic';
-  src: url('assets/fonts/LatoLightItalic/LatoLightItalic.woff2') format('woff2'),
-    url('assets/fonts/LatoLightItalic/LatoLightItalic.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 
-@font-face {
-  font-family: 'LatoLight';
-  src: url('assets/fonts/LatoLight/LatoLight.woff2') format('woff2'),
-    url('assets/fonts/LatoLight/LatoLight.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 
 
 @font-face {
@@ -45,24 +19,6 @@
   font-display: swap;
 }
 
-@font-face {
-  font-family: 'LatoSemibold';
-  src: url('assets/fonts/LatoSemibold/LatoSemibold.woff2') format('woff2'),
-    url('assets/fonts/LatoSemibold/LatoSemibold.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-
-@font-face {
-  font-family: 'LatoSemiBoldItalic';
-  src: url('assets/fonts/LatoSemiBoldItalic/LatoSemiBoldItalic.woff2') format('woff2'),
-    url('assets/fonts/LatoSemiBoldItalic/LatoSemiBoldItalic.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 
 @font-face {
   font-family: 'BarlowCondensed-Bold';
@@ -72,6 +28,61 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'CalisMTBold';
+  src: url('assets/fonts/CalisMTBold/CalisMTBold.woff2') format('woff2'),
+    url('assets/fonts/CalisMTBold/CalisMTBold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SupriaSans-Regular';
+  src: url('assets/fonts/SupriaSans-Regular/SupriaSans-Regular.woff2') format('woff2'),
+    url('assets/fonts/SupriaSans-Regular/SupriaSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SupriaSans-Bold';
+  src: url('assets/fonts/SupriaSans-Bold/SupriaSans-Bold.woff2') format('woff2'),
+    url('assets/fonts/SupriaSans-Bold/SupriaSans-Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat-Light';
+  src: url('assets/fonts/Montserrat-Light/Montserrat-Light.woff2') format('woff2'),
+    url('assets/fonts/Montserrat-Light/Montserrat-Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat-Regular';
+  src: url('assets/fonts/Montserrat-Regular/Montserrat-Regular.woff2') format('woff2'),
+    url('assets/fonts/Montserrat-Regular/Montserrat-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat-Medium';
+  src: url('assets/fonts/Montserrat-Medium/Montserrat-Medium.woff2') format('woff2'),
+    url('assets/fonts/Montserrat-Medium/Montserrat-Medium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 
 
