--- a/style-2.css
+++ b/style-2.css
@@ -1,8 +1,13 @@
 .clu-text-modiule{
 	width: 100%;
+	margin-top: 10px;
 }
 .ln-sec-one{
 
+}
+p strong,
+li strong{
+	font-weight: 700;
 }
 .ln-sec-one-hedding{
 	position: relative;
@@ -35,6 +40,11 @@
 	text-align: center;
 	padding-top: 35px;
 }
+.ln-sec-one-fea-img{
+	padding: 50px 10px 0 10px;
+	text-align: center;
+	margin-bottom: 30px;
+}
 .ln-sec-one-btm-title-inr > strong{
 	font-family: 'LatoBold';
 	font-size: 32px;
@@ -50,7 +60,58 @@
 	width: 112px;
 	height: 60px;
 	padding-right: 10px;
+	margin-bottom: 15px;
 }
 .entry-nmbr h3{
 	font-size: 36px;
+	margin-bottom: 0;
+	letter-spacing: 2px;
+}
+.ln-sec-one-desc > h3{
+	margin-bottom: 25px;
+
+}
+.ln-sec-one-desc > p{
+	margin-bottom: 40px;
+}
+.ln-sec-one-desc > p:last-of-type{
+	margin-bottom: 28px;
+}
+.ln-sec-two{
+	padding-top: 15px;
+}
+.ln-sec-two-desc{
+	padding-top: 
+}
+.ln-sec-three{
+	padding-top: 25px;
+}
+.ln-sec-three-desc h3{
+	margin-bottom: 5px;
+}
+.ln-sec-three-desc h6{
+	font-family: 'CalisMTBold';
+	font-size: 20px;
+	line-height: 1;
+	margin-bottom: 35px;
+}
+.ln-sec-three-desc h6 span{
+	color: #ff0000;
+}
+.ln-sec-three-grid{
+
+}
+.ln-sec-three-grid > ul {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -10px!important;
+}
+.ln-sec-three-grid > ul > li{
+	width: 31.60%;
+	margin: 0 10px;
+	margin-bottom: 20px;
+	border-radius: 10px;
+	border: 2px solid #fff;
+	background: #fbf4d2;
+	box-shadow: 0 1px 10px 0 #ece8e8;
 }
