--- a/common.css
+++ b/common.css
@@ -272,16 +272,16 @@ h4 {
       display: block!important;
     }
     h1{
-      font-size: 40px;
+      font-size: 52px;
     }
     h2{
-      font-size: 35px;
+      font-size: 44px;
     }
     h3 {
-      font-size: 26px;
+      font-size: 32px;
     }
     h4 {
-      font-size: 20px;
+      font-size: 30px;
     }
     p br{
       display: none;
@@ -294,20 +294,46 @@ h4 {
     .show-sm{
         display: block!important;
     }
+    body {
+        font-size: 22px;
+    }
+    p{
+       margin-bottom: 25px;
+    }
     h1{
-      font-size: 35px;
+      font-size: 45px;
     }
     h2{
-      font-size: 30px;
+      font-size: 38px;
     }
     h3 {
-      font-size: 26px;
+      font-size: 30px;
     }
     h4 {
-      font-size: 20px;
+      font-size: 28px;
     }
     p br{
         display: none;
+    }
+    .plr-30 {
+      padding-left: 0px!important;
+      padding-right: 0px!important
+    }
+    .plr-20 {
+      padding-left: 0px!important;
+      padding-right: 0px!important
+    }
+    .plr-10 {
+      padding-left: 0px!important;
+      padding-right: 0px!important
+    }
+    .plr-15 {
+      padding-left: 0px!important;
+      padding-right: 0px!important
+    }
+    .plr-5{
+      padding-left: 0px!important;
+      padding-right: 0px!important
     }
 }
 
@@ -326,16 +352,16 @@ h4 {
        margin-bottom: 20px;
     }
     h1{
-      font-size: 32px;
+      font-size: 40px;
     }
     h2{
-      font-size: 28px;
+      font-size: 35px;
     }
     h3 {
-      font-size: 25px;
+      font-size: 28px;
     }
     h4 {
-      font-size: 20px;
+      font-size: 25px;
     }
 
 }
