--- a/common.css
+++ b/common.css
@@ -158,7 +158,7 @@ img {
 }
 p { margin: 0; margin-bottom: 30px; line-height: 1.4;}
 a { word-wrap: break-word } 
-strong { font-weight:normal }
+strong { font-weight:normal; font-family: 'LatoBold'; }
 p u{
   text-decoration: underline;
 }
