--- a/style-1.css
+++ b/style-1.css
@@ -128,11 +128,11 @@ header.fl-hdr {
 .ls-sec-1-des{
     padding-right: 20px;
 }
-.ls-sec-1-des p strong,
+/*.ls-sec-1-des p strong,
 .ls-sec-2-top-des p strong,
 .ls-sec-2-btm-des p strong{
     font-family: 'LatoBold';
-}
+}*/
 .ls-sec-2{
     padding-top: 30px;
 }
