--- a/common.css
+++ b/common.css
@@ -296,11 +296,10 @@ h4 {
     }
     .pull-left{
       float: initial!important;
-    body {
-        font-size: 22px;
     }
     p{
        margin-bottom: 25px;
+       font-size: 22px!important;
     }
     h1{
       font-size: 45px;
@@ -314,7 +313,7 @@ h4 {
     h4 {
       font-size: 28px;
     }
-    p br{
+    br{
         display: none;
     }
     .plr-30 {
@@ -347,10 +346,8 @@ h4 {
     .show-xs{
         display: block!important;
     }
-    body {
-        font-size: 20px;
-    }
     p{
+      font-size: 20px!important;
        margin-bottom: 20px;
     }
     h1{
