--- a/style-1.css
+++ b/style-1.css
@@ -11,7 +11,7 @@ header.fl-hdr {
 } 
 .header-innr {
     background: #fff;
-    padding: 20px 0;
+    padding: 15px 0 10px;
 }
 .hdr-left,
 .hdr-rgt {
@@ -114,11 +114,11 @@ header.fl-hdr {
 
 
 .ls-sec-1{
-    margin: -50px 30px 0 30px;
-    /*background: url(assets/images/ls-sec-1-bg.jpg);
-    background-repeat: no-repeat!important;
-    background-position: center center!important;
-    background-size: cover!important;*/
+    margin: -50px 0px 0 0px;
+    
+    
+}
+.ls-sec-1-inr{
     padding: 30px 0;
     background: #eef7f0;
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.4);
@@ -128,11 +128,7 @@ header.fl-hdr {
 .ls-sec-1-des{
     padding-right: 20px;
 }
-/*.ls-sec-1-des p strong,
-.ls-sec-2-top-des p strong,
-.ls-sec-2-btm-des p strong{
-    font-family: 'LatoBold';
-}*/
+
 .ls-sec-2{
     padding-top: 30px;
 }
@@ -237,4 +233,96 @@ header.fl-hdr {
   margin-bottom: 20px;
   color: #9096a8;
   font-family: 'Montserrat-Light';
+}
+
+
+@media(max-width: 1199px){
+    .fl-page-bnr-cntlr {
+        max-width: 500px;
+    }
+    .fl-footer-inner {
+        padding: 0 30px;
+    }
+}
+@media(max-width: 991px){
+    .fl-page-bnr-cntlr {
+        max-width: 430px;
+    }
+    .ls-sec-1-img{
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .ls-sec-1-inr{
+        padding-bottom: 0;
+    }
+    .ls-sec-2-btm-des {
+        margin-top: 20px;
+    }
+    .ls-sec-3-inr h2 {
+        padding: 45px 30px 35px 30px;
+    }
+    .fl-footer-wrap{
+        padding: 30px 0 10px;
+    }
+    .fl-footer-inner {
+        padding: 0 0px;
+    }
+    .fl-page-bnr {
+        padding: 40px 0 150px;
+    }
+}
+@media(max-width: 767px){
+    .fl-page-bnr-cntlr {
+        max-width: 385px;
+    }
+    .fl-shipping h4 {
+        font-size: 18px;
+    }
+    .ls-sec-3-inr h2 {
+        padding: 50px 30px 35px 30px;
+    }
+    .fl-page-bnr {
+        padding: 40px 0 120px;
+    }
+    .fl-ftr-des p{
+        font-size: 16px!important;
+    }
+    .fl-copyright p{
+        font-size: 14px!important;
+    }
+}
+@media(max-width: 575px){
+    .ls-sec-3-inr h2 {
+        padding: 50px 0px 35px 0px;
+    }
+    .fl-ftr-nav ul li {
+        padding: 0px 0px;
+        width: 100%;
+        padding-bottom: 10px;
+    }
+    .fl-ftr-nav ul li:not(:last-child):after{
+        content: none;
+    }
+    .fl-page-bnr-cntlr h1 br{
+        display: none;
+    }
+}
+@media(max-width: 479px){
+    .fl-page-bnr-cntlr h1{
+        font-size: 32px;
+    }
+    .ls-sec-3-inr h2{
+        font-size: 30px;
+    }
+}
+@media(max-width: 359px){
+    .fl-shipping h4 {
+        font-size: 14px;
+    }
+    .fl-page-bnr-cntlr h1 {
+        font-size: 30px;
+    }
+    .ls-sec-3-inr h2 {
+        font-size: 28px;
+    }
 }
