--- a/style.css
+++ b/style.css
@@ -492,11 +492,11 @@ header.fl-hdr {
 }
 .fl-ftr-nav ul li:not(:last-child):after{
     content: "";
-    width: 3px;
-    height: 19px;
+    width: 2px;
+    height: 21px;
     position: absolute;
     left: 100%;
-    margin-left: -1px;
+    margin-left: 0;
     background: #dcdcdc;
     top: 50%;
     transform: translateY(-50%);
